--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
                    <b style="color: aqua;font-size: 21px;">Address</b>: Human-Rights Aradagun Badagry, <br>
                             beside LASU Campus extension off Mosafejo rd, Lagos, Nigeria <br>
                    Phone: +2348069304370 <br>
-                   Email : <a href="mailto:">ogawilo@gmail.com</a><br>
+                   Email : <a href="mailto:">ogaranyawilorg@gmail.com</a><br>
 
                    OR click below <i class="fa-solid fa-down-long"></i> <br>
                    <a style="color: red; margin-left: 5%;" href="cont.html" target="_blank">CONTACT US</a>
