ngo under review

--- a/about.html
+++ b/about.html
@@ -13,13 +13,13 @@
     <main class="main-container">
         <div class="first-div">
             <h1>WHO WE ARE:</h1>
-            <P id="myp1"><b style="color: aqua; font-size: 25px;">O</b>garanya widows and Liberty Organisation(OGARANYAWILORG) was founded in the year, 2017 5th April by Mrs Alice Favour Okorie(nee Ogaraga)
+            <P id="myp1"><b style="color: aqua; font-size: 25px;">O</b>garanya widows & Liberty Organisation <small>(OGARANYAWILORG)</small> was founded in the year, 2017 5th April by Mrs Alice Favour Okorie (nee Ogaraga)
             The birth of this august non-governmental organisation came as a result of chairman's experience after the demise of her spouse which came to her as a shock.
             With four kids(then) to cater for, life became too unbearable that she almost lost hope when relations and friends turned their backs on her. 
             As a woman who never relents or get intimidated by circumstances, she braced herself up and began to call on God for direction and inspirations. 
             Those flashes that came to her as a hunch birthed this estalishment as it were.
-            OGARANYAWILORG is an NGO that primarily focuses on the widows' concerns by addressing them in a timely manner based on the availabilty of funds and their criticality.
-            Ever since, OGARANYAWILORG has filled up many gaps in the lives of badagrians =>marjorly women. As a human-rights organisation, we bride ourselves on defending the less-privileged ones, sort and resolve domestic violence
+            <small>(OGARANYAWILORG)</small> is an NGO that primarily focuses on the widows' concerns by addressing them in a timely manner based on the availabilty of funds and their criticality.
+            Ever since, <small>(OGARANYAWILORG)</small> has filled up many gaps in the lives of badagrians =>marjorly women. As a human-rights organisation, we bride ourselves on defending the less-privileged ones, sort and resolve domestic violence
             and other security related risks. We believe in the security of all people. It is our tenet that one happy woman(widow) is proportional to safe nations. 
             </P>
         </div>
@@ -45,17 +45,17 @@
                 <p><b>Hardwork</b>: We believe so much in hardwork. You become what you have worked for in a continuous and proactive manner</p>
                 <p><b>Empathy</b>: We cherish sympathy and reaching out to embrace the one who needs the embrace without being forced to do so.</p>
                 <p><b>Security</b>: The security of lives and properties are our major mandate. You can't talk of work, health, increase, and all of these good things when our lives are at risk. So, we don't joke with it</p>
-                <p><b>Relience</b>: Perseverance is the key and mother of all great achievements. To be great and famous, you as a person must endeavour to be resilient. Never say die! Never shift your grounds no matter how tough. Remain focus! This is who we are: always undaunted and purposeful going the extra miles for the marks ahead!</p>
+                <p><b>Resilience</b>: Perseverance is the key and mother of all great achievements. To be great and famous, you as a person must endeavour to be resilient. Never say die! Never shift your grounds no matter how tough. Remain focus! This is who we are: always undaunted and purposeful going the extra miles for the marks ahead!</p>
                 <p><b>Equality</b>: We believe and accept the fact that all men are equal before God even though we all have different resposibilities, big or small. One notable book by Napoleon Hill stated it clearly: all animals(and we are higher and better mammals) are equal; this is prior to Snowball's(a major character) inversion when it was forcefully changed.</p>
                 <p><b>Integrity</b>: This is our number one core value. Honesty, sincerity and truth are the summary of this great cardinal values. Our words are the same always. Trust us and we shall continue to give you many reasons to have stupendious smiles as always.</p>
                 <p><b>Sacrifice</b>: Selfless sacrifice is the key. It is very wrong to always think about yourselves when there are others who need your attention. We always go out of our way to put smiles on other people's faces. Don't hold this life too tenaciously for we are but visitors here. Consider the weak and try to fight or stand on their behalf. This is what we represent as always.</p>
         </div>
         
         <div class="vision-mission">
-            <h3>VISION</h3>To be the World number one widows' empowerment and liberty Organisation with dominance in the hinterland of african continent               
-            <h3>MISSION</h3>To deliver good services in a timely manner by reaching out to women who are bereft of their spouses through our multifaceted humanitarian aids
+            <h3>VISION</h3><p class="px1">To be the World number one widows' empowerment and liberty Organisation with dominance in the hinterland of african continent</p>               
+            <h3>MISSION</h3><p class="px1">To deliver good services in a timely manner by reaching out to women who are bereft of their spouses through our multifaceted humanitarian aids</p>
             <h4>WHAT WE DO</h4>
-            <p id="px1">We are in the foremost enterprise of ensuring lives are better-of today than they were aforetimes. The quantum leap to euphorial esctacy and concrete cohabitation is when there is reason to smile
+            <p id="px">We are in the foremost enterprise of ensuring lives are better-of today than they were aforetimes. The quantum leap to euphorial esctacy and concrete cohabitation is when there is reason to smile
              :without it, life is diametrically futile! We are in the business of putting smiles on people's faces. Ogawilo assists the widows, poor, downgraded and downtrodden, nuptially disenfranchised and abused, etc to regain their 
              original freedom and happiness. God is the architect of good life, therefore we don't downplay on the worship of our great God through whom we are able and always able to accomplish this milestones in the history of this giant commission.</p>
         </div>
