--- a/cont.html
+++ b/cont.html
@@ -128,7 +128,8 @@
             myForm.style.display = "none";
             container.innerText = "Your submission is well received. Thank you!";
             container.style.background = "white";
-            container.style.width = "100%";
+            container.style.width = "50%";
+            container.style.padding = "20px";
             container.style.color = "green";
 
         }
