--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             </ul>
         </div>
         <div class="myp-div">
-                <p><b>compassion</b>: We are compassionate. We advocate compassion for all men. Tears belong in the domain of darkworlds. We believe that through compassion, such worlds of darkness will be rendered moribund</p>
+                <p><b>compassion</b>: We are compassionate by what we do and preach. We advocate compassion for all men. Tears belong in the domain of darkworlds. We believe that through compassion, such worlds of darkness will be rendered moribund</p>
                 <p><b>Hardwork</b>: We believe so much in hardwork. You become what you have worked for in a continuous and proactive manner</p>
                 <p><b>Empathy</b>: We cherish sympathy and reaching out to embrace the one who needs the embrace without being forced to do so.</p>
                 <p><b>Security</b>: The security of lives and properties are our major mandate. You can't talk of work, health, increase, and all of these good things when our lives are at risk. So, we don't joke with it</p>
@@ -55,8 +55,8 @@
             <h3>VISION</h3>To be the World number one widows' empowerment and liberty Organisation with dominance in the hinterland of african continent               
             <h3>MISSION</h3>To deliver good services in a timeless manner by reaching out to women who are bereft of their spouses through our multifaceted humanitarian aids
             <h4>WHAT WE DO</h4>
-            <p id="px1">We are in the foremost enterprise of ensuring lives are better-of today than they were aforetimes. The quantum leap to euphorial esctacy and concrete cohabitation is when there is reason to smile.
-             __without it, life is diametrically futile! We are in the business of putting smiles on people's faces. Ogawilo assists the widows, poor, downgraded and downtrodden, nuptially disenfranchised and abused, etc to regain their 
+            <p id="px1">We are in the foremost enterprise of ensuring lives are better-of today than they were aforetimes. The quantum leap to euphorial esctacy and concrete cohabitation is when there is reason to smile
+             :without it, life is diametrically futile! We are in the business of putting smiles on people's faces. Ogawilo assists the widows, poor, downgraded and downtrodden, nuptially disenfranchised and abused, etc to regain their 
              original freedom and happiness. God is the architect of good life, therefore we don't downplay on the worship of our great God through whom we are able and always able to accomplish this milestones in the history of this giant commission.</p>
         </div>
         <div>
