--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         
         <div class="vision-mission">
             <h3>VISION</h3>To be the World number one widows' empowerment and liberty Organisation with dominance in the hinterland of african continent               
-            <h3>MISSION</h3>To deliver good services in a timeless manner by reaching out to women who are bereft of their spouses through our multifaceted humanitarian aids
+            <h3>MISSION</h3>To deliver good services in a timely manner by reaching out to women who are bereft of their spouses through our multifaceted humanitarian aids
             <h4>WHAT WE DO</h4>
             <p id="px1">We are in the foremost enterprise of ensuring lives are better-of today than they were aforetimes. The quantum leap to euphorial esctacy and concrete cohabitation is when there is reason to smile
              :without it, life is diametrically futile! We are in the business of putting smiles on people's faces. Ogawilo assists the widows, poor, downgraded and downtrodden, nuptially disenfranchised and abused, etc to regain their 
