--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
                         <h3 id="h3">Vision:</h3>
                         <p class="p2">To be World premier widows' empowerment and liberty Organisation with dominance in the hinterland of african continent</p>
                         <h3 id="h4">Mission:</h3>
-                        <p class="p3">To deliver good services in a timeless manner by reaching out to women who are bereft of their spouses through our multifaceted humanitarian aids</p>
+                        <p class="p3">To deliver good services in a timely manner by reaching out to women who are bereft of their spouses through our multifaceted humanitarian aids</p>
                         <p class="p4">Security = For all</p>
                         
                     </div>
