--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             As a woman who never relents or get intimidated by circumstances, she braced herself up and began to call on God for direction and inspirations. 
             Those flashes that came to her as a hunch birthed this estalishment as it were.
             <small>(OGARANYAWILORG)</small> is an NGO that primarily focuses on the widows' concerns by addressing them in a timely manner based on the availabilty of funds and their criticality.
-            Ever since, <small>(OGARANYAWILORG)</small> has filled up many gaps in the lives of badagrians =>marjorly women. As a human-rights organisation, we bride ourselves on defending the less-privileged ones, sort and resolve domestic violence
+            Ever since, <small>(OGARANYAWILORG)</small> has filled up many gaps in the lives of badagrians: marjorly women. As a human-rights organisation, we bride ourselves on defending the less-privileged ones, sort and resolve domestic violence
             and other security related risks. We believe in the security of all people. It is our tenet that one happy woman(widow) is proportional to safe nations. 
             </P>
         </div>
