--- a/home.html
+++ b/home.html
@@ -110,10 +110,10 @@
             </section>
     
             <section class="quick-link">
-                <p id="quick"> <b style="font-size: 25px;color: aqua;">T</b>o contact us or share your esperience with us, kindly use the information or click on the "contact us" link below:</p>
+                <p id="quick"> <b style="font-size: 25px;color: aqua;">T</b>o contact us or share your experience with us, kindly use the information or click on the "contact us" link below:</p>
                 <address>
                    <b style="color: aqua;font-size: 21px;">Address</b>: Human-Rights Aradagun Badagry, <br>
-                            beside LASU Campus extension off Mosafejo rd, Lagos, Nigeria <br>
+                   beside LASU Campus extension off Mosafejo rd, Lagos, Nigeria <br>
                    Phone: +2348069304370 <br>
                    Email : <a href="mailto:">ogaranyawilorg@gmail.com</a><br>
 
