--- a/cont.html
+++ b/cont.html
@@ -62,8 +62,9 @@
                 <option value="country">Benin Rep</option>
                 <option value="country">cameroon</option>
                 <option value="country">Cape Verde</option>
-                <option value="country">Columbia</option>
                 <option value="country">Central Africa</option>
+                <option value="country">Columbia</option>
+                <option value="country">Comoros</option>
                 <option value="country">East Africa</option>
                 <option value="country">Egypt</option>
                 <option value="country">Europe</option>
@@ -72,8 +73,8 @@
                 <option value="country">Gabon</option>
                 <option value="country">Greece</option>
                 <option value="country">Gambia</option>
-                <option value="country">Comoros</option>
                 <option value="country">India</option>
+                <option value="country">Japan</option>
                 <option value="country">Moroco</option>
                 <option value="country">Niger</option>
                 <option value="country">Nigeria</option>
@@ -86,7 +87,6 @@
                 <option value="country">Tunisia</option>
                 <option value="country">Togo</option>
                 <option value="country">Tanzania</option>
-                <option value="country">Japan</option>
                 <option value="country">United Arab Emirates</option>
                 <option value="country">United States</option>
                 <option value="country">United Kingdom</option>
@@ -97,7 +97,7 @@
             <label for="Message" id="message">Drop Your message here 
             <span style="color: coral; font-size: 23px;" class="fa-solid fa-down-long"></span>
             </label> <br>
-            <textarea name="" id="" cols="30" rows="10" required maxlength="200" minlength="30"></textarea><br>
+            <textarea name="" id="" cols="30" rows="10" required maxlength="150" minlength="20" placeholder="...Your message..."></textarea><br>
             <button type="reset" id="reset" >Reset</button>
             <button type="submit" id="submit">Submit</button>
             <i id="text_content"></i>
