--- a/home.html
+++ b/home.html
@@ -102,11 +102,11 @@
 
             <section class="media-content">
                 <p id="mediap"><b style="font-size: 25px; color: green;">O</b>ur media channels are open to public and we are more than joyous to hear from you. Your testimonies are live testament of who we are, what we do and what we believe. They go a long way to add a good leap into our glorious Vision. Check them out, comment and support in what we do no matter how, where and when.</p>
-                <a href="#" target="_blank"></a><i class="fa-brands fa-facebook"></i>
-                <a href="#" target="_blank"></a><i class="fa-brands fa-twitter"></i>
-                <a href="#" target="_blank"></a><i class="fa-brands fa-whatsapp"></i>
-                <a href="#" target="_blank"></a><i class="fa-brands fa-youtube"></i>
-                <a href="#" target="_blank"></a><i class="fa-brands fa-linkedin"></i>
+                <a href="#" target="_blank">Facebook<i class="fa-brands fa-facebook"></i></a><br>
+                <a href="#" target="_blank">Twitter<i class="fa-brands fa-twitter"></i></a><br>
+                <a href="#" target="_blank">WhatSapp<i class="fa-brands fa-whatsapp"></i></a><br>
+                <a href="#" target="_blank">Youtube<i class="fa-brands fa-youtube"></i></a><br>
+                <a href="#" target="_blank">LinkedIn<i class="fa-brands fa-linkedin"></i></a><br>
             </section>
     
             <section class="quick-link">
