--- a/about.html
+++ b/about.html
@@ -56,11 +56,11 @@
             <h3>MISSION</h3><p class="px1">To deliver good services in a timely manner by reaching out to women who are bereft of their spouses through our multifaceted humanitarian aids</p>
             <h4>WHAT WE DO</h4>
             <p id="px">We are in the foremost enterprise of ensuring lives are better-of today than they were aforetimes. The quantum leap to euphorial esctacy and concrete cohabitation is when there is reason to smile
-             :without it, life is diametrically futile! We are in the business of putting smiles on people's faces. <small>OGARANYAWILORG</small> assists the widows, poor, downgraded and downtrodden, nuptially disenfranchised and abused, etc to regain their 
+             :without it, life is diametrically futile! We are in the business of putting smiles on people's faces. Ogawilo assists the widows, poor, downgraded and downtrodden, nuptially disenfranchised and abused, etc to regain their 
              original freedom and happiness. God is the architect of good life, therefore we don't downplay on the worship of our great God through whom we are able and always able to accomplish this milestones in the history of this giant commission.</p>
         </div>
         <div>
-            <i style="color: aliceblue; font-size: 20px; width: 30px; font-weight: bold;" class="fa-solid fa-right-long"></i> <a style="font-size: 20px; color: aqua;" href="home.html" target =_parent class="link-home">Back to home page</a>
+            <i style="color: aliceblue; font-size: 20px; width: 30px; font-weight: bold;" class="fa-solid fa-right-long"></i> <a style="font-size: 20px; color: aqua;" href="index.html" target =_parent class="link-home">Back to home page</a>
         </div>
     </main>
     <footer id="myfooter">
