--- a/cont.html
+++ b/cont.html
@@ -22,7 +22,7 @@
 
         <!-- Form box/ wrapper -->
 
-        <form action="home.html" method="post" id="form__wrapper">
+        <form action="index.html" method="post" id="form__wrapper">
             <label for="prefix">Prefix</label><br>
             <select  style="margin-bottom: 5px;" name="prefix" id="prefix" required>
                 <option disabled selected value="Select Your Status">Select Your Status</option>
@@ -46,9 +46,9 @@
             <label for="phone">Telephone</label><br>
             <input type="tel" name="phone" id="phone" placeholder="Enter Your Phone No" required><br>
             <label for="Sex">Gender</label><br>
-            <input type="checkbox" name="male" id="male">
+            <input type="checkbox" name="male" id="male" required>
             <label for="male">Male</label><br>
-            <input type="checkbox" name="female" id="female">
+            <input type="checkbox" name="female" id="female" required>
             <label for="name">Female</label><br>
             <label for="addr">Residential Address</label><br>
             <input type="text" name="address" id="address" placeholder="Enter Your house Address" required><br>
@@ -62,9 +62,8 @@
                 <option value="country">Benin Rep</option>
                 <option value="country">cameroon</option>
                 <option value="country">Cape Verde</option>
-                <option value="country">Central Africa</option>
                 <option value="country">Columbia</option>
-                <option value="country">Comoros</option>
+                <option value="country">Central Africa</option>
                 <option value="country">East Africa</option>
                 <option value="country">Egypt</option>
                 <option value="country">Europe</option>
@@ -73,8 +72,8 @@
                 <option value="country">Gabon</option>
                 <option value="country">Greece</option>
                 <option value="country">Gambia</option>
+                <option value="country">Comoros</option>
                 <option value="country">India</option>
-                <option value="country">Japan</option>
                 <option value="country">Moroco</option>
                 <option value="country">Niger</option>
                 <option value="country">Nigeria</option>
@@ -87,6 +86,7 @@
                 <option value="country">Tunisia</option>
                 <option value="country">Togo</option>
                 <option value="country">Tanzania</option>
+                <option value="country">cameroon</option>
                 <option value="country">United Arab Emirates</option>
                 <option value="country">United States</option>
                 <option value="country">United Kingdom</option>
@@ -97,12 +97,10 @@
             <label for="Message" id="message">Drop Your message here 
             <span style="color: coral; font-size: 23px;" class="fa-solid fa-down-long"></span>
             </label> <br>
-            <textarea name="" id="" cols="30" rows="10" required maxlength="150" minlength="20" placeholder="...Your message..."></textarea><br>
+            <textarea name="" id="" cols="30" rows="10"></textarea><br>
             <button type="reset" id="reset" >Reset</button>
             <button type="submit" id="submit">Submit</button>
-            <i id="text_content"></i>
         </form>
-        
     </div>
     <!-- footer section -->
     <footer id="myfooter">
@@ -113,21 +111,20 @@
    <script>
     const container = document.getElementById("form__container")
     const mySubmit = document.getElementById("submit");
-    const myName = document.getElementById("fullname");
-    const email = document.getElementById("email");
-    const phone = document.getElementById("phone");
-    const time = document.getElementById("time");
+    const myName = document.getElementById("fullname").value;
+    const email = document.getElementById("email").value;
+    const phone = document.getElementById("phone").value;
+    const time = document.getElementById("time").value;
     const male = document.getElementById("male");
     const female = document.getElementById("female");
-    const address = document.getElementById("address");
-    const mycomment = document.getElementById("message");
-    const country = document.getElementById("selected");
-    const statuz = document.getElementById("prefix");
+    const address = document.getElementById("address").value;
+    const mycomment = document.getElementById("message").value;
+    const country = document.getElementById("selected").value;
+    const statuz = document.getElementById("prefix").value;
     const myForm = document.getElementById("form__wrapper");
-    let text_Content = document.getElementById("text_content"); 
     mySubmit.onclick = ()=>{
-        if (myName.value != "" && statuz.value && address.value != "" && country.value 
-             && time.value && phone.value && email.value !="" && mycomment.value != "" && (male.checked || female.checked)) {
+        if (male.checked || female.checked || myName == "text" && email && phone && 
+            time && address && mycomment && statuz && country) {
             myForm.style.display = "none";
             container.innerText = "Your submission is well received. Thank you!";
             container.style.background = "white";
@@ -136,13 +133,15 @@
             container.style.color = "green";
 
         }
-
         else{
-            text_Content.textContent = "Oops! Please, fill in all necessary blocks";
-            text_Content.style.color = "red";
-        
+            myForm.innerText = "oops! please, fill in all necessary blocks";
+            myForm.style.color = "red";
+            myForm.style.background = "white";
+            myForm.style.width = "100%";
         }
     }
+
+
     </script>
 </body>
 </html>
