--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                                         <a href="about.html" class="contus">Who we Are</a>
                                         <a href="cont.html" class="contus">Contact Us</a>
                                         <a href="blog.html" class="contus">Blogs</a>
-                                        <a href="cont.html" class="contus">video-Photo Gallery</a>
+                                        <a href="video.html" class="contus">video-Photo Gallery</a>
                                     </div>
                             </li>
                             <li><a id="departing" href="#">DEPTS & SERVICES</a><i id="ikons" class="fa-solid fa-caret-down"></i>
                                 <div id="departs">
-                                    <a href="" target="_blank" class="depart-links">Human Rights Depts</a>
-                                    <a href="" target="_blank" class="depart-links">Widows Empowerment Depts</a>
-                                    <a href="" target="_blank" class="depart-links">Crisis Control Depts</a>
+                                    <a href="rights.html" target="_blank" class="depart-links">Human Rights Depts</a>
+                                    <a href="widows.html" target="_blank" class="depart-links">Widows Empowerment Depts</a>
+                                    <a href="crisis.html" target="_blank" class="depart-links">Crisis Control Depts</a>
                                 </div>
                             </li>
                             <li><a id="donate" href="don.html" target="_blank">DONATE HERE</a></li>
