--- a/don.html
+++ b/don.html
@@ -11,8 +11,8 @@
 <body>
     <div class="donate-container">
         <div id="images">
-            <img src="/PHOTOS/widows.jpg" alt="widows pics">
-            <img src="/PHOTOS/children in school.jpg" alt="">
+            <img src="widows.jpg" alt="widows pics">
+            <img src="children in school.jpg" alt="">
         </div>
         <h1>Make a donation here<i class="fa-solid fa-arrow-up-long"></i><i class="fa-solid fa-arrow-down-long"></i></h1>
         <p>Through you, widows and the less-privileged are waxing strong and doing those things
