--- a/don.html
+++ b/don.html
@@ -59,7 +59,7 @@
                 </div>
                 <button type="button" id="next">Next</button>
             </form>
-            <span id="validated"></span>
+            <span style="margin-top: 40px; text-align: center;" id="validated"></span>
         </div>
     </div>
     <script src="java.js"></script>
