--- a/don.html
+++ b/don.html
@@ -37,7 +37,7 @@
                             <option id="pounds" value="GBP">GBP|British Pound</option>
                             <option id="euro" value="EUR">EUR|Euro</option>
                     </select>
-                </div>
+                </div><br>
                 <div id="mymonth">
                     <button type="button" id="btn-mon">Monthly</button>
                     <div id="_monthly" style="display: none;">
@@ -55,7 +55,7 @@
                         <option id="pounds_2" value="GBP">GBP|British Pound</option>
                         <option id="euro_2" value="EUR">EUR|Euro</option>
                     </select>
-                    
+                
                 </div>
                 <button type="button" id="next">Next</button>
             </form>
