--- a/don.html
+++ b/don.html
@@ -23,12 +23,12 @@
                 <div id="myOne">
                     <button type="button" id="btn">One-time</button>
                     <div id="one_time" class="one_time">
-                        <input type="button" name="1k" id="one-time" onclick="Fmoney('1,000')" value="₦1k once">
-                        <input type="button" name="2k" id="one-time" onclick="Fmoney('2,000')" value="₦2k once">
-                        <input type="button" name="3k" id="one-time" onclick="Fmoney('3,000')" value="₦3k once"><br>
-                        <input type="button" name="5k" id="one-time" onclick="Fmoney('5,000')" value="₦5k once">
-                        <input type="button" name="10k" id="one-time" onclick="Fmoney('10,000')" value="₦10k once">
-                        <input type="button" name="15k" id="one-time" onclick="Fmoney('15,000')" value="₦15k once">
+                        <input type="button" name="1k" id="one-time" onclick="Fmoney('1,000')" value="1k once">
+                        <input type="button" name="2k" id="one-time" onclick="Fmoney('2,000')" value="2k once">
+                        <input type="button" name="3k" id="one-time" onclick="Fmoney('3,000')" value="3k once"><br>
+                        <input type="button" name="5k" id="one-time" onclick="Fmoney('5,000')" value="5k once">
+                        <input type="button" name="10k" id="one-time" onclick="Fmoney('10,000')" value="10k once">
+                        <input type="button" name="15k" id="one-time" onclick="Fmoney('15,000')" value="15k once">
                         <input type="text" name="Total" id="total_1"  placeholder="Total Amnt">
                     </div>
                     <select name="money-symbol" id="symbol-1">
@@ -41,12 +41,12 @@
                 <div id="mymonth">
                     <button type="button" id="btn-mon">Monthly</button>
                     <div id="_monthly" style="display: none;">
-                        <input type="button" name="1k" id="monthly" onclick="Fcash('1,000')" value="₦1k mon">
-                        <input type="button" name="2k" id="monthly" onclick="Fcash('2,000')" value="₦2k mon">
-                        <input type="button" name="3k" id="monthly" onclick="Fcash('3,000')" value="₦3k mon"><br>
-                        <input type="button" name="5k" id="monthly" onclick="Fcash('5,000')" value="₦5k mon">
-                        <input type="button" name="10k" id="monthly" onclick="Fcash('10,000')" value="₦10k mon">
-                        <input type="button" name="15k" id="monthly"onclick="Fcash('15,000')" value="₦15k mon">
+                        <input type="button" name="1k" id="monthly" onclick="Fcash('1,000')" value="1k mon">
+                        <input type="button" name="2k" id="monthly" onclick="Fcash('2,000')" value="2k mon">
+                        <input type="button" name="3k" id="monthly" onclick="Fcash('3,000')" value="3k mon"><br>
+                        <input type="button" name="5k" id="monthly" onclick="Fcash('5,000')" value="5k mon">
+                        <input type="button" name="10k" id="monthly" onclick="Fcash('10,000')" value="10k mon">
+                        <input type="button" name="15k" id="monthly"onclick="Fcash('15,000')" value="15k mon">
                         <input type="text" name="Total" id="total" placeholder="Total Amnt">
                     </div>
                     <select name="money-symbol" id="symbol-2" style="display: none;">
