--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
                         <div class="swiper">
                         
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img src="pic-4.jpg"></div>
-                                <div class="swiper-slide"><img src="pic-6.jpg"></div>
-                                <div class="swiper-slide"><img src="my pic-1 (2).jpg"></div>
-                                <div class="swiper-slide"><img src="pic-1.jpg"></div>
-                                <div class="swiper-slide"><img src="pic-7.jpg"></div>
-                                <div class="swiper-slide"><img src="pic-8.jpg"></div>
+                                <div class="swiper-slide"><img src="/PHOTOS/school (2).jpg" alt="school kids" >
+                                <h4>Pupils being fed by Ogaranya widows</h4></div>
+                                <div class="swiper-slide"><img src="/PHOTOS/widows.jpg" alt="school kids">
+                                <h4>Widows after some events outing</h4></div>
                             </div>
                             
                             <div class="swiper-pagination"></div>
