--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         <div class="swiper">
                         
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img src="school (2).jpg" alt="school kids" >
+                                <div class="swiper-slide"><img src="/school (2).jpg" alt="school kids" >
                                 <h4>Pupils being fed by Ogaranya widows</h4></div>
-                                <div class="swiper-slide"><img src="widows.jpg" alt="school kids">
+                                <div class="swiper-slide"><img src="/widows.jpg" alt="school kids">
                                 <h4>Widows after some events outing</h4></div>
                             </div>
                             
