--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                                 <h4>Pupils being fed by Ogaranya widows</h4></div>
                                 <div class="swiper-slide"><img src="/widows.jpg" alt="school kids">
                                 <h4>Widows after some events outing</h4></div>
+                                <div class="swiper-slide"><img src="/widows.webp" alt="school kids">
+                                    <h4>Widows inside a rented-space(with canopy) during our annual convention at Badagry, 2021</h4></div>
                             </div>
                             
                             <div class="swiper-pagination"></div>
