--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                             <li><a href="index.html">HOME</a></li>
                             <li><a id="about_us" href="#">ABOUT US</a><i id="icons" class="fa-solid fa-caret-down"></i>
                                     <div id="about">
-                                        <a href="about.html" class="contus">Who we Are</a>
+                                        <a href="/ABOUT US/ABOUT/about.html" class="contus">Who we Are</a>
                                         <a href="cont.html" class="contus">Contact Us</a>
-                                        <a href="blog.html" class="contus">Blogs</a>
-                                        <a href="video.html" class="contus">video-Photo Gallery</a>
+                                        <a href="/ABOUT US/BLOG/blog.html" class="contus">Blogs</a>
+                                        <a href="/ABOUT US/VIDEO/video.html" class="contus">video-Photo Gallery</a>
                                     </div>
                             </li>
                             <li><a id="departing" href="#">DEPTS & SERVICES</a><i id="ikons" class="fa-solid fa-caret-down"></i>
