--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
                             <li><a id="about_us" href="#">ABOUT US</a><i id="icons" class="fa-solid fa-caret-down"></i>
                                     <div id="about">
                                         <a href="/ABOUTUS/ABOUT/about.html" class="contus">Who we Are</a>
-                                        <a href="cont.html" class="contus">Contact Us</a>
+                                        <a href="/ABOUTUS/CONTACT/cont.html" class="contus">Contact Us</a>
                                         <a href="/ABOUTUS/BLOG/blog.html" class="contus">Blogs</a>
                                         <a href="/ABOUTUS/VIDEO/video.html" class="contus">video-Photo Gallery</a>
                                     </div>
                             </li>
                             <li><a id="departing" href="#">DEPTS & SERVICES</a><i id="ikons" class="fa-solid fa-caret-down"></i>
                                 <div id="departs">
-                                    <a href="rights.html" target="_blank" class="depart-links">Human Rights Depts</a>
-                                    <a href="widows.html" target="_blank" class="depart-links">Widows Empowerment Depts</a>
-                                    <a href="crisis.html" target="_blank" class="depart-links">Crisis Control Depts</a>
+                                    <a href="/SERVICES/rights.html" target="_blank" class="depart-links">Human Rights Depts</a>
+                                    <a href="/SERVICES/widows.html" target="_blank" class="depart-links">Widows Empowerment Depts</a>
+                                    <a href="/SERVICES/crisis.html" target="_blank" class="depart-links">Crisis Control Depts</a>
                                 </div>
                             </li>
-                            <li><a id="donate" href="don.html" target="_blank">DONATE HERE</a></li>
+                            <li><a id="donate" href="/DONATE/don.html" target="_blank">DONATE HERE</a></li>
                         </ul>
                     </div>
                 </nav-bar>
